Fix layout issues with phpbb and set max height on banners.

--- a/joomla/ukrgb/less/body.less
+++ b/joomla/ukrgb/less/body.less
@@ -25,6 +25,4 @@ body {
 	}
 }
 
-.phpbb-layout{
-	min-width: 580px;
-}
+
