--- a/joomla/ukrgb/less/phpbb.less
+++ b/joomla/ukrgb/less/phpbb.less
@@ -30,9 +30,6 @@
 	height: initial;
 }
 
-//select,
-//textarea,
-//input[type='text'],
 #phpbb select{
 	height: initial;
 	width: initial;
@@ -40,4 +37,13 @@
 #phpbb label {
 	display: initial;
 	font-size: inherit;
+}
+
+// force the width and keep footer at botom of page.
+.phpbb-layout{
+	min-width: 580px;
+}
+.phpbb-layout-body{
+	display: inline-table;
+	min-width: 580px;	
 }
